package dss.Houses.House;


public interface MaterialsAbstract {
    void addMaterials(String material);

}

