package dss.Houses.House;

import java.util.List;

public class MinimalisticMaterials extends MaterialsAbstract {
    @Override
    public List<String> getMaterials() {
        return null;
    }
}
