@startuml

title __HOUSE's Class Diagram__\n

        class dss.Houses.House.BudgetMaterials {
            + getMaterials()
            + setMaterials()
        }


        abstract class dss.Houses.House.MaterialsAbstract {
            ~ materialsAbstracts : List<String>
            + getMaterials()
            + setMaterials()
        }


        class dss.Houses.House.MaterialFactory {
            + createHouse(HouseType type)
        }


        enum HouseType {
          BUDGET
          LUXURY
          MINIMALISTIC
        }

        class dss.Houses.House.LuxuryMaterials {
            + getMaterials()
            + setMaterials()
        }


        class dss.Houses.House.MinimalisticMaterials {
            + getMaterials()
            + setMaterials()
        }

  dss.Houses.House.BudgetMaterials -up-|> dss.Houses.House.MaterialsAbstract
  dss.Houses.House.LuxuryMaterials -up-|> dss.Houses.House.MaterialsAbstract
  dss.Houses.House.MinimalisticMaterials -up-|> dss.Houses.House.MaterialsAbstract
  dss.Houses.House.MaterialFactory .up.> dss.Houses.House.BudgetMaterials
  dss.Houses.House.MaterialFactory .up.> dss.Houses.House.LuxuryMaterials
  dss.Houses.House.MaterialFactory .up.> dss.Houses.House.MinimalisticMaterials


@enduml
